Minor styling change to make sure modal covers the entire webpage.  Added margin and height to body and html tags.

--- a/Client/public/styles.css
+++ b/Client/public/styles.css
@@ -81,7 +81,7 @@
   top: 0px;
   left: 550px;
   border:5px solid black;
-  background-size: 900px 900px;
+  background-size: 900px;
   background-repeat:no-repeat;
 }
 
